Enable preview by default to provide access to the best Javac features